--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ sourceSets {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.magicwerk:brownies-collections:0.9.13'
 }
 
 compileKotlin {
