--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.magicwerk:brownies-collections:0.9.13'
+    implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
 }
 
 compileKotlin {
