--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ sourceSets {
     test.java.srcDirs += 'src/test/aoc2017'
     test.java.srcDirs += 'src/test/aoc2018'
     test.java.srcDirs += 'src/test/aoc2019'
+    test.java.srcDirs += 'src/test/aoc2020'
     test.java.srcDirs += 'src/test/common'
     test.resources.srcDirs += 'src/test/resources'
 }
