--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 sourceSets {
     main.java.srcDirs += 'src/main'
+    main.resources.srcDirs += 'src/main/resources'
     test.java.srcDirs += 'src/test/aoc2015'
     test.java.srcDirs += 'src/test/aoc2016'
     test.java.srcDirs += 'src/test/aoc2017'
@@ -30,6 +31,8 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.magicwerk:brownies-collections:0.9.13'
     implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.0' // For downloading input file
+    implementation 'com.github.kittinunf.result:result:3.1.0' // Needed for Fuel
 }
 
 compileKotlin {
