--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
 }
 
 version '1.0-SNAPSHOT'
@@ -9,7 +9,6 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 sourceSets {
@@ -26,12 +25,12 @@ sourceSets {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
-    implementation 'org.magicwerk:brownies-collections:0.9.13'
+    implementation 'org.magicwerk:brownies-collections:0.9.15'
     implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
-    implementation 'com.github.kittinunf.fuel:fuel:2.3.0' // For downloading input file
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1' // For downloading input file
     implementation 'com.github.kittinunf.result:result:3.1.0' // Needed for Fuel
 }
 
@@ -40,4 +39,9 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+// https://discuss.gradle.org/t/gradle-7-fail-for-duplicates-in-copy-specs-has-no-duplicates-in-project/39834/9
+rootProject.tasks.named("processTestResources") {
+    duplicatesStrategy = 'include'
 }
