--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
 }
 
 version '1.0-SNAPSHOT'
@@ -21,15 +21,16 @@ sourceSets {
     test.java.srcDirs += 'src/test/aoc2019'
     test.java.srcDirs += 'src/test/aoc2020'
     test.java.srcDirs += 'src/test/aoc2021'
+    test.java.srcDirs += 'src/test/aoc2022'
     test.java.srcDirs += 'src/test/common'
     test.resources.srcDirs += 'src/test/resources'
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.21'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
-    implementation 'org.magicwerk:brownies-collections:0.9.15'
+    implementation 'org.magicwerk.brownies:brownies-collections:0.9.19'
     implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1' // For downloading input file
     implementation 'com.github.kittinunf.result:result:3.1.0' // Needed for Fuel
