2025 Day 4: Printing Department
Pretty easy day when I have my generic code for parsing input like this.

Only problem was that I did some stupid mistakes initially where I looked
for <8 instead of <4 and then in part two that I removed non-removable
rolls instead of the removable rolls.

--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,5 @@ rootProject.tasks.named("processTestResources") {
 rootProject.tasks.named("processResources") {
     duplicatesStrategy = 'include'
 }
+compileKotlin {
+}
